refactor: 시도횟수를 도메인 객체에 저장